# tiendil-org-content

./: .gitignore  LICENSE  README.md  x.py
content/collections/: ai-notes-2024.toml  game-concepts.toml  interesting-about-books.toml  interesting-about-development.toml  interesting-about-gamedev.toml  interesting-about-thinking.toml
content/pages/404/: article.toml  en.md  ru.md
content/pages/500/: article.toml  en.md  ru.md
content/pages/about/: article.toml  en.md  ru.md
content/pages/best/: article.toml  en.md  ru.md
content/pages/impressum/: article.toml  en.md
content/pages/mcp/: article.toml  en.md  ru.md
content/pages/projects/: article.toml  en.md  ru.md
content/posts/2013-001-turn-on-donate/: ru.md
content/posts/2013-08-08-turn-on-donate/: article.toml  ru.md
content/posts/2014-001-about-names-creation/: ru.md
content/posts/2014-002-tests-that-test-tests/: article.toml
content/posts/2014-10-09-about-names-creation/: article.toml  ru.md
content/posts/2014-11-05-tests-that-test-tests/: ru.md
content/posts/2015-001-history-of-organizational-theory/: article.toml  ru.md
content/posts/2015-002-testing-semantic-of-code/: ru.md
content/posts/2015-004-2-kdicast-browser-based-games/: article.toml  ru.md
content/posts/2015-004-let-sell-work-of-players/: ru.md
content/posts/2015-007-why-developers-do-not-make-this-simple-thing/: article.toml  ru.md
content/posts/2015-008-why-do-i-need-a-plan/: ru.md
content/posts/2015-009-verification-though-logic-duplication/: article.toml
content/posts/2015-01-06-history-of-organizational-theory/: ru.md
content/posts/2015-01-16-testing-semantic-of-code/: article.toml  ru.md
content/posts/2015-010-agreement-on-shares/: article.toml
content/posts/2015-012-webdev/: article.toml
content/posts/2015-013-the-logic-of-chance/: ru.md
content/posts/2015-015-when-it-is-necessary-to-listen-to-users/: article.toml  ru.md
content/posts/2015-017-about-system-thinking/: article.toml  ru.md
content/posts/2015-018-about-basic-income/: article.toml  ru.md
content/posts/2015-02-23-my-mmog-vision/: article.toml  ru.md
content/posts/2015-03-24-let-sell-work-of-players/: article.toml  ru.md
content/posts/2015-04-13-devby-social-research/: article.toml  ru.md
content/site/: en.toml  footer.html  meta.toml  redirects.toml  ru.toml
local/: .env  pyproject.toml
prod/: pyproject.toml
(+826 files in other folders)
