[tool.poetry]
name = "local_tiendil_org"
version = "0.1"
description = "local tiendi.org blog"
repository = "https://github.com/Tiendil/tiendil-org-content"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

uvicorn = {extras = ["standard"], version = "0.*"}
brigid = "^0.15.2"

# brigid = {path = "../../brigid", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
