[tool.poetry]
name = "prod_tiendil_org"
version = "0.1"
description = "prod tiendi.org blog"
repository = "https://github.com/Tiendil/tiendil-org-content"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

uvicorn = "0.50.2"
brigid = "^0.16.0"
